Warnings resolved